# GymManager

./: CMakeLists.txt  Main.qml  main.cpp
QML/CustomWidgets/: TrainerElement.qml
QML/Pages/: ClientPage.qml  NutritionPage.qml  StatisticPage.qml  SubscriptionPage.qml  TrainerPage.qml
cpp/: gymbackend.cpp  sqlmanager.cpp  traineritemsmodel.cpp
header/: gymbackend.h  sqlmanager.h  traineritemsmodel.h
